---------------------------------------------------------------------------------------------------
Version: 0.0.13
Date: ????
  Changes:
    - added data-stage glowing leaves compatibility for trees grown from seeds
    - removed legacy overlay generation scripts
  Bugfixes:
    - fixed error when render objects were cleared or destroyed unexpectedly
---------------------------------------------------------------------------------------------------
Version: 0.0.12
Date: 2025-11-06
  Changes:
    - added runtime glow compatibility for trees grown from seeds
---------------------------------------------------------------------------------------------------
Version: 0.0.11
Date: 2025-11-06
  Changes:
    - updated mod thumbnail
  Bugfixes:
    - fixed error when tree leaf variations had nil frame_count
  Locale:
    - updated de, ja, ru, and uk translations from Crowdin
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 2025-09-19
  Changes:
    - changed the default value of Trees with glowing leaves from Most to None
    - changed the default value of Decoratives with glowing leaves from Few to None
  Locale:
    - clarified and expanded mod setting descriptions
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 10NOV2024
  Bugfixes:
    - fixed error when loading a save with light render data from a previous version
---------------------------------------------------------------------------------------------------
Version: 0.0.8
Date: 10NOV2024
  Changes:
    - updated to support Factorio 2.0
    - updated glow auras in map view to use the camera position instead of the last known cursor selection
  Bugfixes:
    - fixed error when recursively modifying the scale of animations
---------------------------------------------------------------------------------------------------
Version: 0.0.7
Date: 23SEP2024
  Changes: